<resources>
    <string name="app_name">2 Urban Sisters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_header">Login to your Account</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Login</string>
    <string name="or">Or</string>
    <string name="sign_up">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="loading">Processing…</string>
    <string name="password">Password</string>
    <string name="success">Success</string>
    <string name="tryAgain">Try Again</string>
    <string name="title_activity_admin">Admin Dashboard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="upload_hairstyle">Upload</string>
    <string name="title">Name</string>
    <string name="description">Description</string>
    <string name="add_extension">Tap above to select photo</string>
    <string name="amount">Amount</string>
    <string name="totalProducts">Total Products</string>
    <string name="orders">New Orders</string>
    <string name="delivered">Delivered</string>
    <string name="instock">In Stock</string>
    <string name="totalVBought">Total Bought</string>
    <string name="totalAmount">Total Amount</string>
    <string name="currentUser">Current Admins</string>
    <string name="currentUsers">Current Users</string>
    <string name="servicehead">Shop your all time Hair Extensions</string>
    <string name="recentProjects">New in stock</string>
    <string name="add_to_cart">Order</string>
    <string name="quantity">Quantity</string>
    <string name="myOrders">My Orders</string>
</resources>